--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             <a class="link-button" target="blank" href="https://www.facebook.com/mssiam03 ">Read the Documentation</a>
         </div>
     </section>
-
     <section class="fourthSec">
         <div class="thirdsec-s">
             <h1 class="thirdsec-heading">Know our<br>
@@ -102,8 +101,10 @@
             <img src="images/latest-work/work-3.jpg" alt="">
         </div>
     </section>
-
+    <footer>
+        <h2>Mission <span>2022</span></h2>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
-
 
 </html>
