--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         </div>
 
     </section>
+
     <h5 class="fastSec">Scrool down to explore more about us</h5>
     <h1 id="text">My Mission in <span class="yellow-colour">2022</span> </h1>
+
     <section>
         <div class="secondsec  bColor1">
             <img src="images/illustrators/illustrator-1.png" alt="" srcset="">
@@ -89,8 +91,8 @@
         </div>
     </section>
     <h1 id="text">My Latest Work</h1>
-    <section class="work-banner">
 
+    <section>
         <div class="tierce-width">
             <img src="images/latest-work/work-1.png" alt="">
         </div>
@@ -100,7 +102,9 @@
         <div class="tierce-width">
             <img src="images/latest-work/work-3.jpg" alt="">
         </div>
+
     </section>
+
     <footer>
         <h2>Mission <span>2022</span></h2>
         <p>Hard work, Perseverance, and Determination for 2022</p>
